# object-oriented-programming-lab4

./: CMakeLists.txt  README.md
include/: Array.h  Figure.h  Hexagon.h  Octagon.h  Point.h  Triangle.h
src/: main.cpp
tests/: test_main.cpp
